--- a/package.json
+++ b/package.json
@@ -22,20 +22,18 @@
     "log"
   ],
   "dependencies": {
-    "left-pad": "0.0.4",
-    "meow": "^3.1.0"
+    "meow": "^5.0.0"
   },
   "devDependencies": {
-    "coveralls": "^2.11.2",
-    "istanbul": "^0.3.14",
-    "jscs": "^1.13.1",
-    "jshint": "^2.7.0",
-    "mocha": "*"
+    "ava": "^0.25.0",
+    "coveralls": "^3.0.2",
+    "nyc": "^13.1.0",
+    "standard": "^12.0.1"
   },
   "scripts": {
-    "coverage": "istanbul cover _mocha -- -R spec && rm -rf ./coverage",
-    "lint": "jshint *.js test --exclude node_modules && jscs *.js test",
-    "test": "npm run-script lint && mocha"
+    "coverage": "nyc report --reporter=text-lcov | coveralls",
+    "lint": "standard",
+    "test": "nyc ava"
   },
   "bin": "cli.js"
 }
