--- a/package.json
+++ b/package.json
@@ -28,12 +28,12 @@
     "ava": "^0.25.0",
     "coveralls": "^3.0.2",
     "nyc": "^13.1.0",
-    "standard": "^12.0.1"
+    "xo": "^0.23.0"
   },
   "scripts": {
     "coverage": "nyc report --reporter=text-lcov | coveralls",
-    "lint": "standard",
-    "test": "nyc ava"
+    "lint:fix": "xo --fix",
+    "test": "xo && nyc ava"
   },
   "bin": "cli.js"
 }
